[tool.poetry]
name = "treemirror"
version = "0.1.1"
description = "A program to mirror the directory structure of a source directory to a destination directory."
authors = ["Samyak Jain <samyak.jn11@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
argparse = "^1.4.0"
shutil-extra = "^0.0.6"
tqdm = "^4.65.0"

[tool.poetry.group.dev.dependencies]
wheel = "^0.40.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
treemirror = "treemirror.cli:main"